--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,21 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(blinky)
+project(FogML-Zephyr)
 
 set(fogml_sources
     src/fogml_sdk/anomaly_rt/fogml_lof.c
     src/fogml_sdk/anomaly_rt/fogml_reservoir.c
     src/fogml_sdk/ports/fogml_ports_zephyr.c
-    src/fogml_generated/random_forest_model.c
+    src/fogml_sdk/dsp/fogml_dsp.c
+)
+
+file(GLOB fogml_generated CONFIGURE_DEPENDS
+     "src/fogml_generated/*.h"
+     "src/fogml_generated/*.c"
 )
 
 set(private_sources
     src/main.c)
 
-target_sources(app PRIVATE ${private_sources} ${fogml_sources})
+target_sources(app PRIVATE ${private_sources} ${fogml_sources} ${fogml_generated})
